--- a/vignettes/survival.Rmd
+++ b/vignettes/survival.Rmd
@@ -82,6 +82,7 @@ subsequent_diagnoses <- msrv$sus$apc_spells_diagnosis |>
   # filter out diagnoses that cannot be subsequent events - e.g. we cannot have an ACS subsequent
   # event happening within the index ACS spell (this is the index ACS event)
   dplyr::filter(!(diagnosis_str %in% c("acs_stemi", "acs_nstemi", "acs_unstable_angina") & 
+                    #TODO: ?add cardiomyopathy diagnoses too?
                     # is an ACS and is within the index spell
                   lubridate::`%within%`(a=lubridate::interval(event_start,event_end), 
                                         b=lubridate::interval(index_start,index_end)))) |>
@@ -90,16 +91,35 @@ subsequent_diagnoses <- msrv$sus$apc_spells_diagnosis |>
                     by=c("nhs_number", "index_start", "index_end")) |>
   # complete the data.frame so each nhs_number has at least one of each event
   tidyr::complete(diagnosis_str, tidyr::nesting(nhs_number, index_start, index_end)) |>
+  # complete will inject one diagnosis_str=NA row for each patient (given the right_join above); undo this
+  dplyr::filter(!is.na(diagnosis_str)) |>
   # tidy up 
-  dplyr::select(nhs_number, index_start, event_start, diagnosis_str) |>
+  dplyr::select(nhs_number, index_start, event_start, event_end, diagnosis_str) |>
+  # event status
+  dplyr::mutate(status = !is.na(event_start)) %>% 
+  # add an extra row for the end interval, up until max follow up time
+  {
+    { . -> tmp } |>                                        #TODO: add in max follow up and death date
+    dplyr::filter(status) |>
+    dplyr::group_by(nhs_number, diagnosis_str) |>
+    dplyr::slice_max(event_start, with_ties=FALSE) |>
+    dplyr::mutate(event_start=event_end, 
+                  event_end=Sys.Date(),                   #TODO: change this to max follow up or death
+                  status=FALSE) |>
+    dplyr::bind_rows(tmp) 
+  } |>
   # set up the start and stop times and event status for survival
-  
-  
-  #TODO
-  dplyr::group_by(nhs_number, diagnosis_str)
-  dplyr::mutate(status = !is.na(event_start),
-                tstart = dplyr::if_else(status) lubridate::time_length(lubridate::interval(index_start, ), unit="days")
-
+  # do the recurrent events within diagnosis event types
+  dplyr::group_by(nhs_number, diagnosis_str) |>
+  # earliest event first - needs to be event_end.
+  dplyr::arrange(event_end, .by_group=TRUE) |>
+  # the start time is 0 if at the beginning; or the time from index event to the end of the previous
+  # event. i.e. leaving a gap of time that the person is not at risk whilst they are an inpatient.
+  dplyr::mutate(tstart = lubridate::time_length(lubridate::interval(index_start, dplyr::lag(event_end, default=index_start[[1]])), unit="days"), 
+                tstop  = dplyr::if_else(status, 
+                                        lubridate::time_length(lubridate::interval(index_start, event_start), unit="days"),
+                                        lubridate::time_length(lubridate::interval(index_start, Sys.Date()), unit="days")), 
+                event  = 1:dplyr::n())
 
 ```
 
